--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Logo Color Palette */
+:root {
+  --customBlue: #4AA5FF;
+  --customDarkBlue: #22267D;
+  --customLightBlue: #E6F3FF;
+  --customGray: #8d8d8d;
+}
